// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventForm should render delete button if not empty \`initialValues\` props. 1`] = `
<styled.form
  onSubmit={[Function]}
>
  <FormGroup
    label="Name"
  >
    <Field
      component={[Function]}
      name="name"
      type="text"
    />
  </FormGroup>
  <FormGroup
    label="Unit"
  >
    <Field
      component={[Function]}
      name="unit"
      type="text"
    />
  </FormGroup>
  <FormGroup
    label="Value"
  >
    <Field
      component={[Function]}
      name="value"
      type="text"
    />
  </FormGroup>
  <FormGroup
    label="Remark"
  >
    <Field
      component={[Function]}
      name="remark"
      type="text"
    />
  </FormGroup>
  <styled.div>
    <Button
      className="primary"
      type="submit"
      value="Save"
    />
    <Button
      onClick={[Function]}
      value="List"
    />
    <Button
      onClick={[Function]}
      value="Delete"
    />
  </styled.div>
</styled.form>
`;

exports[`EventForm should render error message if not empty \`hasError\` props. 1`] = `
<styled.form
  onSubmit={[Function]}
>
  <FormGroup
    label="Name"
  >
    <Field
      component={[Function]}
      name="name"
      type="text"
    />
  </FormGroup>
  <FormGroup
    label="Unit"
  >
    <Field
      component={[Function]}
      name="unit"
      type="text"
    />
  </FormGroup>
  <FormGroup
    label="Value"
  >
    <Field
      component={[Function]}
      name="value"
      type="text"
    />
  </FormGroup>
  <FormGroup
    label="Remark"
  >
    <Field
      component={[Function]}
      name="remark"
      type="text"
    />
  </FormGroup>
  <styled.div>
    <span>
      Oops, An expected error seems to have occurred.
    </span>
  </styled.div>
  <styled.div>
    <Button
      className="primary"
      type="submit"
      value="Save"
    />
    <Button
      onClick={[Function]}
      value="List"
    />
  </styled.div>
</styled.form>
`;
